--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Example .env file for Tuya MQTT Control Service
-# Copy this file to .env and fill in your device info
 
-# Device configuration (required, JSON array)
-# Example:
-TUYA_DEVICES='[{"id": "dev1", "ip": "192.168.1.10", "key": "abc123"}, {"id": "dev2", "ip": "192.168.1.11", "key": "def456"}]'
+# Copy this file to .env and fill in your device info
+TUYA_DEVICES_0_ID=DEVICEID
+TUYA_DEVICES_0_IP=X.X.X.X
+TUYA_DEVICES_0_KEY=SAMPLEKEY
 
 # MQTT broker config
 MQTT_BROKER=mosquitto
